fix table alignment

--- a/wp-content/plugins/visualdiff/css/editor.css
+++ b/wp-content/plugins/visualdiff/css/editor.css
@@ -88,10 +88,6 @@ li.exercise table tr td {
 }
 */
 
-fb-table {
-
-}
-
 /*
 table.fb-table {
    text-align: left;
@@ -109,6 +105,7 @@ table.fb-table {
 
 table.fb-table {
    text-align: left;
+
    margin-top:20px;
    margin-bottom:20px;
 
@@ -129,6 +126,13 @@ table.fb-table td {
    padding: 8px;
    border: 1px #186da5 solid;
 }
+
+table.fb-aligncenter {
+   margin-left: auto;
+   margin-right: auto;
+}
+
+
 
 hr.answer { 
    padding-top: 20px;
